objects/disco__Youreka_Public_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Youreka that can be configured by the end user</description>
    <fields>
        <fullName>disco__Answer_Creation_Batch_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the answer creation queueable job is running</description>
        <inlineHelpText>Indicates that the answer creation queueable job is running</inlineHelpText>
        <label>Answer Creation Batch Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Answer_Creation_Batch_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Size to the set of forms to create answers for during the queueable job.</description>
        <inlineHelpText>Size to the set of forms to create answers for during the queueable job.</inlineHelpText>
        <label>Answer Creation Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Create_Mobile_Save_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Mobile Save Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Default_Auto_Archive_Days__c</fullName>
        <description>Indicated the number of days after the submission of a Form that it should be Archived. Set to 0 to indicate it should never auto archive. This value is copied to the Template when creating new Templates where if can be overridden.</description>
        <inlineHelpText>Indicated the number of days after the submission of a Form that it should be Archived. Set to 0 to indicate it should never auto archive. This value is copied to the Template when creating new Templates where if can be overridden.</inlineHelpText>
        <label>Default Auto Archive Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Default_Auto_Lock_Days__c</fullName>
        <description>Indicates the number of days after submission of a Form that it should be locked. Set to 0 to never auto-lock. This value is copied to the Template when creating new Templates where if can be overridden.</description>
        <inlineHelpText>Indicates the number of days after submission of a Form that it should be locked. Set to 0 to never auto-lock. This value is copied to the Template when creating new Templates where if can be overridden.</inlineHelpText>
        <label>Default Auto Lock Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Default_Remove_Mobile_Avail_Days__c</fullName>
        <description>Indicates the number of days after the submission of a Form for the Template  that that it will no longer be available in mobile apps. This value is copied to the Template when creating new Templates where if can be overridden. Use 0 to disable.</description>
        <inlineHelpText>Indicates the number of days after the submission of a Form for the Template  that that it will no longer be available in mobile apps. This value is copied to the Template when creating new Templates where if can be overridden.Use 0 to disable.</inlineHelpText>
        <label>Default Remove Mobile Avail Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Enable_Template_Image_Metadata__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check to enable including image metadata for template images in template builder</description>
        <inlineHelpText>check to enable including image metadata for template images in template builder</inlineHelpText>
        <label>Enable Template Image Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Form_Save_Delay_Time__c</fullName>
        <description>Amount of time in milliseconds to wait between saving forms if several are queued to be saved coming back online.</description>
        <inlineHelpText>Amount of time in milliseconds to wait between saving forms if several are queued to be saved coming back online.</inlineHelpText>
        <label>Form Save Delay Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Form_Save_Serial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Save forms in serial order (one by one), if several are queued to be saved when coming back online. If enabled, &quot;Form Save Delay Time&quot; setting is ignored.</description>
        <inlineHelpText>Save forms in serial order (one by one), if several are queued to be saved when coming back online. If enabled, &quot;Form Save Delay Time&quot; setting is ignored.</inlineHelpText>
        <label>Form Save Serial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Max_Logs_To_Keep__c</fullName>
        <description>If keeping mobile save logs, this is the maximum number of logs to keep.Leave empty for no maximum.</description>
        <inlineHelpText>If keeping mobile save logs, this is the maximum number of logs to keep.Leave empty for no maximum.</inlineHelpText>
        <label>Max Logs To Keep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Mobile_Photo_Max_Size__c</fullName>
        <description>Maximum size for photos in pixels (long side). The larger the size, the more detailed the photos will be, the longer the mobile sync will take, and the more data space will be used in Salesforce. The default is 750.</description>
        <inlineHelpText>Maximum size for photos in pixels (long side). The larger the size, the more detailed the photos will be, the longer the mobile sync will take, and the more data space will be used in Salesforce. The default is 750.</inlineHelpText>
        <label>Mobile Photo Max Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Number_of_Days_to_Keep_Logs__c</fullName>
        <description>If logging, you can indicate the number of days to keep these logs here. Longer time periods can be helpful but also use data storage. The default is 30.</description>
        <inlineHelpText>If logging, you can indicate the number of days to keep these logs here. Longer time periods can be helpful but also use data storage. The default is 30.</inlineHelpText>
        <label>Number of Days to Keep Logs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Photo_Metadata_Chunk_Size__c</fullName>
        <description>Number of Content Documents to send at a time in a sync. Leave empty for default behavior</description>
        <inlineHelpText>Number of Content Documents to send at a time in a sync. Leave empty for default behavior</inlineHelpText>
        <label>Photo Metadata Chunk Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Run_Youreka_Triggers_Synchronously__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Youreka created triggers run asynchronously to update answers in other forms to speed up saving. If this is causing problems in your flows, you can check this checkbox to have them run synchronously.</description>
        <inlineHelpText>Youreka created triggers run asynchronously to update answers in other forms to speed up saving. If this is causing problems in your flows, you can check this checkbox to have them run synchronously.</inlineHelpText>
        <label>Run Youreka Triggers Synchronously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Save_E_Sig_as_JPG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that E-Signatures should create JPG Content Documents as well</description>
        <inlineHelpText>Indicates that E-Signatures should create JPG Content Documents as well</inlineHelpText>
        <label>Save E-Sig as JPG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Template_Cache_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check to enable the template caching feature to speed up mobile sync times across users</description>
        <inlineHelpText>check to enable the template caching feature to speed up mobile sync times across users</inlineHelpText>
        <label>Template Cache Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Template_Cache_Lifespan__c</fullName>
        <description>lifespan of org cache (in hours) before its purged, maximum is 48 hours, minimum is 1 hour. Default is 24 hours.(if left empty)</description>
        <inlineHelpText>lifespan of org cache (in hours) before its purged, maximum is 48 hours, minimum is 1 hour. Default is 24 hours(if left empty)</inlineHelpText>
        <label>Template Cache Lifespan</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Template_Image_Fields__c</fullName>
        <description>comma separated list of field names for template image metadata in template builder (ONLY TEXT FIELDS SUPPORTED)</description>
        <inlineHelpText>comma separated list of field names for template image metadata in template builder (ONLY TEXT FIELDS SUPPORTED)</inlineHelpText>
        <label>Template Image Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Use_Classic_Answer_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Classic answer creation uses insert and update for answers to field link questions. If you have custom code that depends on that sequence, check this checkbox. Leave it unchecked for faster form creation.</description>
        <inlineHelpText>Classic answer creation uses insert and update for answers to field link questions. If you have custom code that depends on that sequence, check this checkbox. Leave it unchecked for faster form creation.</inlineHelpText>
        <label>Use Classic Answer Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Whitelist_FL_Objects__c</fullName>
        <description>A comma separated list of object API Names to allow field links to. WARNING: whitelisting objects here is no guarantee they&apos;ll work correctly as they are untested.</description>
        <inlineHelpText>A comma separated list of object API Names to allow field links to. WARNING: whitelisting objects here is no guarantee they&apos;ll work correctly as they are untested.</inlineHelpText>
        <label>Whitelist FL Objects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Whitelist_LS_Objects__c</fullName>
        <description>A comma separated list of object API Names to allow linked sections for. WARNING: whitelisting objects here is no guarantee they&apos;ll work correctly as they are untested.</description>
        <inlineHelpText>A comma separated list of object API Names to allow linked sections for. WARNING: whitelisting objects here is no guarantee they&apos;ll work correctly as they are untested.</inlineHelpText>
        <label>Whitelist LS Objects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Youreka Public Settings</label>
</CustomObject>